--- a/src/components/OurSolutions/styles.css
+++ b/src/components/OurSolutions/styles.css
@@ -13,7 +13,7 @@
  flex-direction: column;
  justify-content: space-evenly;
  align-items: flex-start;
- padding-left: 50px;
+ padding-left: 20px;
 
 }
 
@@ -35,7 +35,8 @@
 }
 
 .right-section-values{
-  width: 550px;
+  width: 80vw;
+  max-width: 550px;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -43,7 +44,8 @@
 
 .right-section-values img{
   height: 60px;
-  margin-right: 20px;
+  max-width: 100%;
+  margin-right: 10px;
 }
 
 .right-section-values h2{
@@ -51,56 +53,52 @@
   }
 
 .right-section-values p{
-width: 300px;
+width: 250px;
 }
 
 
 
 
 
-@media (width <= 425px) {
-
+@media (max-width: 430px) {
   .second-section {
-    display: flex;
     flex-direction: column;
   }
-  
-  .left-section{
-   width: 100vw;
+
+  .left-section {
+    width: 100vw;
+    padding-left: 10px;
   }
-  
-  .left-section-content{
-  width: 80%;
-  }
-  .left-section img{
+
+  .left-section img {
     width: 80%;
   }
-  
+
   .right-section {
     width: 100vw;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
   }
-  
-  .right-section-values{
-    width: 80%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
+
+  .right-section-values {
+    width: 90%;
   }
-  
-  .right-section-values img{
-    height: 60px;
-    margin-right: 20px;
+
+  .right-section-values p {
+    width: 200px;
   }
-  
-  .right-section-values h2{
-    font-weight: 400;
-    }
-  
-  .right-section-values p{
-  width: 300px;
+}
+
+@media (max-width: 768px) {
+  .left-section {
+    width: 100%;
+    padding-left: 15px;
+  }
+
+  .right-section {
+    width: 100%;
+  }
+
+  .right-section-values {
+    width: 85%;
   }
   
   
