--- a/src/components/SideBar/styles.css
+++ b/src/components/SideBar/styles.css
@@ -68,6 +68,8 @@
   margin-left: 250px;
   padding: 20px;
   min-height: 100vh;
+  width: calc(100% - 250px);
+  box-sizing: border-box;
 }
 
 @media (width <= 768px) {
