--- a/src/global.css
+++ b/src/global.css
@@ -14,6 +14,12 @@
   scroll-behavior: smooth;
 }
 
+body,
+html {
+  overflow-x: hidden;
+  width: 100%;
+}
+
 input,
 select,
 textarea {
@@ -72,4 +78,6 @@ button:hover {
 
 .container {
   width: 100%;
+  display: flex;
+  overflow-x: hidden;
 }
