--- a/src/components/BannerPrimary/styles.css
+++ b/src/components/BannerPrimary/styles.css
@@ -1,6 +1,7 @@
 .page-container{
 display: flex;
 flex-direction: column;
+width: 100%;
 height: 600px;
 justify-content: space-evenly;
 align-items: center;
@@ -8,6 +9,7 @@ background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
 url("../../assets/none-background.jpg");
 background-repeat: no-repeat; 
 background-position: center;
+background-size: cover;
 } 
 
 .page-container h1{ 
